tests/negative/lexer/underscore_end.orng
fn main() -> Int {
    let x_ = 0
    x_
}